crates/monochange/tests/snapshots/affected__affected_since_flag_detects_changeset_added_after_revision@affected_since_flag_detects_changeset_added_after_revision.snap
---
source: crates/monochange/tests/affected.rs
expression: redacted
---
{
  "affectedPackageIds": [
    "core"
  ],
  "changedPaths": [
    ".changeset/feature.md",
    "crates/core/src/lib.rs"
  ],
  "changesetPaths": [
    ".changeset/feature.md"
  ],
  "comment": null,
  "coveredPackageIds": [
    "core"
  ],
  "enforce": false,
  "errors": [],
  "ignoredPaths": [],
  "labels": [],
  "matchedPaths": [
    "crates/core/src/lib.rs"
  ],
  "matchedSkipLabels": [],
  "required": true,
  "status": "passed",
  "summary": "changeset verification passed: attached changesets cover 1 changed package",
  "uncoveredPackageIds": []
}
