crates/monochange/tests/snapshots/affected__multiline_comment@fails_when_changeset_targets_wrong_package.snap
---
source: crates/monochange/tests/affected.rs
expression: contents
---
### monochange changeset verification failed

changeset verification failed: attached changesets do not cover 1 changed package

Changed package paths:
- `crates/core/src/lib.rs`

Affected packages:
- `core`

Attached changeset files:
- `.changeset/feature.md`

Errors:
- changed packages are not covered by attached changesets: core

Allowed skip labels:
- `no-changeset-required`

How to fix:
- add or update a `.changeset/*.md` file so it references every changed package or owning group
- for example: `mc change --package <id> --bump patch --reason "describe the change"`
- or apply one of the configured skip labels when no release note is required
