crates/monochange/tests/snapshots/affected__multiline_comment@respects_package_additional_paths.snap
---
source: crates/monochange/tests/affected.rs
expression: contents
---
### monochange changeset verification failed

changeset verification failed: attached changesets do not cover 1 changed package

Changed package paths:
- `Cargo.lock`

Affected packages:
- `core`

Errors:
- changed packages are not covered by attached changesets: core

How to fix:
- add or update a `.changeset/*.md` file so it references every changed package or owning group
- for example: `mc change --package <id> --bump patch --reason "describe the change"`
